[tool.poetry]
name = "lightning-conceptnet"
version = "0.1.0"
description = "Python library to work with ConceptNet offline"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.45.0"
pynndb = "^1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
