[tool.poetry]
name = "lightning-conceptnet"
version = "0.1.0"
description = "Python library to work with ConceptNet offline"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.45.0"
pynndb = "^1.1.5"
typer = "^0.2.1"
loguru = "^0.4.1"
mashumaro = "^1.12"

[tool.poetry.scripts]
lightning-conceptnet-build = "lightning_conceptnet.cli:app"

[tool.poetry.dev-dependencies]
stackprinter = "^0.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
